[package]
name = "brm"
version = "1.5.0"
edition = "2021"
authors = [ "" ]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dialoguer = "0.11.0"
toml = "0.8.13"
clap_complete = "4.5.2"
skim = "*"

[dev-dependencies]
anyhow = "1.0.79"
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"